2006-08-28  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/all-font-metrics.cc: remove TFM support.

	* lily/include/tfm.hh: remove TFM support, TFM reader.

	* lily/include/binary-source-file.hh: remove Binary_source_file.

2006-08-27  Graham Percival  <gpermus@gmail.com>

	* Documentation/topdocs/NEWS.itely: add @c marker for
	stuff I've processed.

	* Documentation/user/ various: info from NEWS.

2006-08-27  Joe Neeman  <joeneeman@gmail.com>

	* lily/paper-column-engraver.cc (finalize): Oops, this change
	should have gone in on 2006-08-23

2006-08-26  Mats Bengtsson  <mabe@s3.kth.se>

	* scripts/lilypond-book.py (LATEX_INSPECTION_DOCUMENT): Use double
	quotes to quote arguments. Fixes Windows problem.

	* python/lilylib.py (progress): idem

2006-08-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/musicxml2ly.py: fix for importing
	minor key signatures from MusicXML.  (Phillip Kirlin)

2006-08-24  Phillip Kirlin  <pkirlin@acm.org>

	* python/musicxml.py: 
	(Attributes.get_key_signature): now correctly retrieves mode from 
	MusicXML. 

2006-08-25  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/parser.yy (output_def_body): take ownership of identifier
	back to C++.

	* Documentation/user/advanced-notation.itely (Metronome marks):
	update use of \tempo in \midi.

2006-08-24  Erik Sandberg  <mandolaerik@gmail.com>

	* input/mutopia/*: upgrade to new midi tempo syntax (repairs make
	web partially)

2006-08-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* input/regression/tie-chord-partial.ly: clarify example.

	* scm/define-music-properties.scm (all-music-properties): remove
	untied.

	* ly/music-functions-init.ly: remove \untied.

	* lily/tie-engraver.cc (struct Head_event_tuple): store both
	stream events and music events.
	(stop_translation_timestep): search acknowledged heads for
	tie-event.

	* input/regression/tie-chord-partial.ly: new file.

	* scm/define-markup-commands.scm (char): use ly:wide-char->utf-8
	for \char markup command.
